links to knowkee

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
                 <div id="knowkee-project" class="glass glass-padding">
                     <h3 class="text-xl font-bold mb-2">Knowkee (mobile app)</h3>
                     <p class="text-gray-300">
-                        A digital wallet for you to store and share your life achievements, available on the Play Store
+                        A digital wallet for you to store and share your life achievements, available on the <a href="https://play.google.com/store/apps/details?id=com.knowkeewallet&pli=1" target="_blank"
+                        rel="noopener noreferrer" style="color: #d0c700;">Play Store</a>
                         and
-                        App Store
+                        <a href="https://apps.apple.com/us/app/knowkee/id6448114191" target="_blank"
+                            rel="noopener noreferrer" style="color: #d0c700;">App Store</a>
                     </p>
                     <div class="dropdown inline-block mt-4">
                         <div id="knowkee-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
