--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="text-center space-y-4">
                         <div class="main-card-description">
                             <div>Welcome to my digital realm.</div>
-                            <div>Here's a glimpse into my backend development reality.</div>
+                            <div>Here's a glimpse into my development reality.</div>
                         </div>
                         <div class="flex flex-wrap justify-center content-center p-4">
 
