fix: etl section fits on card: iline property deleted

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ def lambda_handler(event, context):
                         An email event data streaming ETL pipeline providing business insights for marketing email
                         campaigns
                     </p>
-                    <div class="inline-block mt-4">
+                    <div class="mt-4">
                         <div id="email-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                             <p><strong>My Role</strong> <br>Backend. I handled (under the supervision of the lead
                                 developer and CTO) the implementation of this email event data streaming ETL pipeline.
