--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <a href="#projects" class="cami-btn">Projects</a>
                             </div>
                             <div class="m-1 p-2 main-card-button">
-                                <a href="#connect" class="cami-btn">Connect</a>
+                                <a href="#connect" class="cami-btn">Contact</a>
                             </div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                             </p>
 
 
-                            <pre class="code-block"><code class="language-python">
+                            <pre class="code-block"><code class="language-python code-code">
 import json
 import boto3
 import pymongo
@@ -406,7 +406,7 @@ def lambda_handler(event, context):
                                 <br>
                             </p>
                             <h2>Code sample:</h2>
-                            <pre class="code-block"><code class="language-python">
+                            <pre class="code-block"><code class="language-python code-code">
 import json
 import boto3
 import hmac, hashlib, base64
@@ -624,7 +624,7 @@ def lambda_handler(event, context):
                                 <br>
                             </p>
                             <h2>Code sample:</h2>
-                            <pre class="code-block"><code class="language-node-repl" style="font-family: monospace !important;">
+                            <pre class="code-block"><code class="language-node-repl code-code" style="font-family: monospace !important;">
 'use strict';
 console.log('Loading function');
 exports.handler = (event, context, callback) => {
@@ -1043,7 +1043,7 @@ exports.handler = (event, context, callback) => {
 
             </section>
             <footer id="connect">
-                <h1 class="text-3xl font-bold mb-2 text-center">Connect with me</h1>
+                <h1 class="text-3xl font-bold mb-2 text-center">Contact</h1>
                 <div class="flex flex-wrap justify-center space-x-4">
                     <div class="profile-link p-2">
                         <a href="http://www.linkedin.com/in/camilochavesdeveloper" target="_blank"
