--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@ exports.handler = (event, context, callback) => {
                             class="flex items-center no-underline hover:underline">
                             <img src="./img/X_logo_2023_original.png" alt="Twitter Icon"
                                 class="w-6 h-6 mr-2 text-green-500">
-                            <pre>Twitter</pre>
+                            <pre>X</pre>
                         </a>
                     </div>
                     <div class="profile-link p-2">
