font size media queries

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta property="og:title" content="Camilo Chaves Backend Developer Portfolio" />
     <meta property="og:description" content="Here's a glimpse into my backend development work" />
     <meta property="og:image" content="https://www.camilochaves.com/img/Profile_2023_sq~2.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
@@ -1066,7 +1067,7 @@ exports.handler = (event, context, callback) => {
                             class="flex items-center no-underline hover:underline">
                             <img src="./img/X_logo_2023_original.png" alt="Twitter Icon"
                                 class="w-6 h-6 mr-2 text-green-500">
-                            <pre></pre>
+                            <pre>Twitter</pre>
                         </a>
                     </div>
                     <div class="profile-link p-2">
