--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@ exports.handler = (event, context, callback) => {
                             rel="noopener noreferrer" class="flex items-center no-underline hover:underline">
                             <img src="./img/LI-In-Bug-green.png" alt="LinkedIn Icon"
                                 class="w-6 h-6 mr-2 text-green-500">
-                            <pre>LinkedIn</pre>
+                            <pre>LinkedIn®</pre>
                         </a>
                     </div>
                     <div class="profile-link p-2 justify-start">
