--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@ exports.handler = (event, context, callback) => {
                         <a href="https://github.com/camichaves79" target="_blank" rel="noopener noreferrer"
                             class="flex items-center no-underline hover:underline">
                             <img src="./img/github-mark-green.png" alt="GitHub Icon"
-                                class="w-6 h-6 mr-2 text-green-500">
+                                class="w-6 h-6 mr-2 text-white">
                             <pre>GitHub</pre>
                         </a>
                     </div>
