Modify job title and update contact links
Updated job title and LinkedIn link, removed Twitter link.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="glass main-card">
                     <img class="profile_picture" src="./img/Profile_2023_sq~2.jpg" width="250px" height="250px">
                     <h1 class="text-5xl font-bold mb-2 text-center">Camilo Chaves</h1>
-                    <h2 class="text-lg mb-5 text-center">Backend Web Developer</h2>
+                    <h2 class="text-lg mb-5 text-center">Software Engineer</h2>
                     <div class="text-center space-y-4">
                         <div class="main-card-description">
                             <div>Welcome to my digital realm.</div>
@@ -1063,7 +1063,7 @@ exports.handler = (event, context, callback) => {
                 <h1 class="text-3xl font-bold mb-2 text-center">Contact</h1>
                 <div class="flex flex-wrap justify-center space-x-4">
                     <div class="profile-link p-2">
-                        <a href="http://www.linkedin.com/in/camilochavesdeveloper" target="_blank"
+                        <a href="https://www.linkedin.com/in/camilochavesh/" target="_blank"
                             rel="noopener noreferrer" class="flex items-center no-underline hover:underline">
                             <img src="./img/LI-In-Bug-green.png" alt="LinkedIn Icon"
                                 class="w-6 h-6 mr-2 text-green-500">
@@ -1076,14 +1076,6 @@ exports.handler = (event, context, callback) => {
                             <img src="./img/github-mark-green.png" alt="GitHub Icon"
                                 class="w-6 h-6 mr-2 text-white" style="color: white !important;">
                             <pre>GitHub</pre>
-                        </a>
-                    </div>
-                    <div class="profile-link p-2">
-                        <a href="https://x.com/CamiloChavesH79" target="_blank" rel="noopener noreferrer"
-                            class="flex items-center no-underline hover:underline">
-                            <img src="./img/X_logo_2023_original.png" alt="Twitter Icon"
-                                class="w-6 h-6 mr-2 text-green-500">
-                            <pre>Twitter</pre>
                         </a>
                     </div>
                     <div class="profile-link p-2">
