--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <section id="projects" class="py-20 grid grid-columns-1 justify-items-center">
                 <div id="knowkee-project" class="glass glass-padding">
-                    <h3 class="text-xl font-bold mb-2">Knowkee (mobile app)</h3>
+                    <h3 class="text-xl font-bold mb-2">Professional Credentials Digital Wallet mobile app</h3>
                     <p class="text-gray-300">
                         A digital wallet for you to store and share your life achievements, available on the <a
                             href="https://play.google.com/store/apps/details?id=com.knowkeewallet&pli=1" target="_blank"
